--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </style>
   </head>
   <body>
-    <h1>Vertical Menu</h1>
+    <h1>Flot Js Examples</h1>
 
     <div class="vertical-menu">
       <a href="#" class="active">Home</a>
